Thu Sep 25 15:26:43 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h (HAVE_NDIR_H): Define.
	* vms.h: Add comment about the include of ndir.h.
	* ndir.h: Protect against multiple inclusion.

Tue, 9 Sep 1997  Jim Kingdon

	* config.h: Define HAVE_VPRINTF.

	* pwd.h, vms.h: Define pid_t and mode_t.

Tue Sep  9 18:53:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* pwd.h, pwd.c: Remove getpwnam per change to expand_path.
	* config.h: Define GETPWNAM_MISSING.

	* pwd.c (getpwuid): Declare argument as unsigned int not uid_t.

	* config.h (SYSTEM_GETCALLER): Define.
	* pwd.c (getpwuid, getpwnam): Always return NULL (see comment
	for rationale).
	* options.h: Don't define CVS_BADROOT.
	* pwd.h: Nuke uid_t and related changes.

	* filesubr.c (fnfold): Further expand comment about how to handle
	filenames like "y.tab.c".

Sun Sep  7 17:38:58 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h (HAVE_STRDUP): Remove; not used anywhere.
	* misc.h, misc.c: Remove strdup per change to ../configure.in.

Sun Jun  8 23:42:42 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h (HAVE_MKFIFO): Remove; not used anywhere.

Sun May 11 11:49:05 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h: Remove USE_DIRECT_TCP; see ../ChangeLog for rationale.

Wed Mar 12 16:10:01 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h (HAVE_SETVBUF): Removed; no longer used.

Wed Jan 29 18:27:41 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h (GREP): Remove; no longer used.

Tue Jan 28 18:29:03 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h: Remove SIZEOF_INT and SIZEOF_LONG; no longer needed
	with lib/md5.c changes.

Thu Jan  2 13:30:56 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* dir.h, filesubr.c, filutils.c, filutils.h, misc.c, misc.h,
	ndir.c, pipe.c, pipe.h, waitpid.c: Remove "675" paragraph;
	see ../ChangeLog for rationale.

Wed Jan  1 22:50:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
